src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address_Check__c</fullName>
        <formula>IF((ISBLANK(  Residential_City__pc  ) &amp;&amp; 
ISBLANK(  Residential_Country__pc  ) &amp;&amp; 
ISBLANK(  Residential_Country_Code__pc ) &amp;&amp; 
ISBLANK(  Residential_Extra_Address__pc  ) &amp;&amp; 
ISBLANK(  Residential_State__pc  ) &amp;&amp; 
ISBLANK(  Residential_Street__pc  ) &amp;&amp; 
ISBLANK(  Residential_Zipocde__pc )), &apos;TRUE&apos;, &apos;FALSE&apos;)</formula>
        <label>Address Check</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>(TODAY() -  PersonContact.BIRTH_DATE__c )*24/(365*24)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alt_Email_Raw__c</fullName>
        <label>Alternate Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bad_Email__c</fullName>
        <formula>LOWER(PersonEmail) &lt;&gt; LOWER(Email_raw__c)  || LOWER( Alternate_Email__pc ) &lt;&gt; LOWER( Alt_Email_Raw__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bad Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_raw__c</fullName>
        <label>Email</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_Birth_Date__c</fullName>
        <formula>IF( 
!ISBLANK(Employee_Restricted_Access__c), 
&quot;**/**/****&quot;, 
TEXT(MONTH(BIRTH_DATE__pc)) &amp; &quot;/&quot; &amp; TEXT(DAY(BIRTH_DATE__pc)) &amp; &quot;/&quot; &amp;TEXT(YEAR(BIRTH_DATE__pc)) 
)</formula>
        <label>Birth Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emp_SSN_Last_4__c</fullName>
        <formula>IF( 
!ISBLANK(Employee_Restricted_Access__c)  , 
&quot;****&quot;, 
SSN_Last_4__pc 
)</formula>
        <label>SSN Last 4</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Employee_Restricted_Access__c</fullName>
        <label>Employee Restricted Access</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Home_Phone_Number__c</fullName>
        <label>Home Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>ID_1_Type__c</fullName>
        <formula>CASE(ID_1_Type__pc , 
0, &apos;000 Unknown&apos;, 
1, &apos;001 Known Existing Member&apos;,
2, &apos;002 State Drivers License&apos;,
3, &apos;003 State ID Card&apos;,
4, &apos;004 US Passport&apos;,
5, &apos;005 Foreign Passport&apos;,
6, &apos;006 Military ID Card&apos;,
7, &apos;007 Foreign Government Issued ID&apos;,
8, &apos;008 Resident Alien Card&apos;,
9, &apos;009 Disabled/elderly with no ID&apos;,
10, &apos;010 Foreign Entity with no ID&apos;,
11, &apos;011 Low Enforcement&apos;,
12, &apos;012 Amish Customer with no ID&apos;,
13, &apos;013 Student&apos;,
14, &apos;014 Birth Certificate&apos;,
15, &apos;015 Minor with no ID&apos;,
16, &apos;016 TWIC Card&apos;,
&apos;Value Not Found&apos;)</formula>
        <label>ID 1 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_2_Type__c</fullName>
        <formula>CASE(ID_2_Type__pc , 
0, &apos;000 Unknown&apos;, 
1, &apos;001 Known Existing Member&apos;, 
2, &apos;002 State Drivers License&apos;, 
3, &apos;003 State ID Card&apos;, 
4, &apos;004 US Passport&apos;, 
5, &apos;005 Foreign Passport&apos;, 
6, &apos;006 Military ID Card&apos;, 
7, &apos;007 Foreign Government Issued ID&apos;, 
8, &apos;008 Resident Alien Card&apos;, 
9, &apos;009 Disabled/elderly with no ID&apos;, 
10, &apos;010 Foreign Entity with no ID&apos;, 
11, &apos;011 Low Enforcement&apos;, 
12, &apos;012 Amish Customer with no ID&apos;, 
13, &apos;013 Student&apos;, 
14, &apos;014 Birth Certificate&apos;, 
15, &apos;015 Minor with no ID&apos;, 
16, &apos;016 TWIC Card&apos;, 
&apos;Value Not Found&apos;)</formula>
        <label>ID 2 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_3_Type__c</fullName>
        <formula>CASE(ID_3_Type__pc  , 
0, &apos;000 Unknown&apos;, 
1, &apos;001 Known Existing Member&apos;, 
2, &apos;002 State Drivers License&apos;, 
3, &apos;003 State ID Card&apos;, 
4, &apos;004 US Passport&apos;, 
5, &apos;005 Foreign Passport&apos;, 
6, &apos;006 Military ID Card&apos;, 
7, &apos;007 Foreign Government Issued ID&apos;, 
8, &apos;008 Resident Alien Card&apos;, 
9, &apos;009 Disabled/elderly with no ID&apos;, 
10, &apos;010 Foreign Entity with no ID&apos;, 
11, &apos;011 Low Enforcement&apos;, 
12, &apos;012 Amish Customer with no ID&apos;, 
13, &apos;013 Student&apos;, 
14, &apos;014 Birth Certificate&apos;, 
15, &apos;015 Minor with no ID&apos;, 
16, &apos;016 TWIC Card&apos;, 
&apos;Value Not Found&apos;)</formula>
        <label>ID 3 Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_NA_LEHS__c</fullName>
        <description>The last date that a needs assessment housing section was created for the member.</description>
        <label>Last NA LEHS</label>
        <summarizedField>Needs_Assesment__c.Last_LEHS__c</summarizedField>
        <summaryFilterItems>
            <field>Needs_Assesment__c.Last_LEHS__c</field>
            <operation>notEqual</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Needs_Assesment__c.Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_NA_LEOM__c</fullName>
        <description>The last date that a needs assessment life events section was created for the member.</description>
        <label>Last NA LEOM</label>
        <summarizedField>Needs_Assesment__c.Last_LEOM__c</summarizedField>
        <summaryForeignKey>Needs_Assesment__c.Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Last_NA__c</fullName>
        <description>Date of the last needs assessment record</description>
        <label>Last NA</label>
        <summarizedField>Needs_Assesment__c.CreatedDate</summarizedField>
        <summaryForeignKey>Needs_Assesment__c.Member__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Member_Map_Link__c</fullName>
        <formula>IF(ISBLANK(Residential_Street__pc) , &quot;&quot;, 
   HYPERLINK(&quot;https://maps.google.com/maps?q=&quot; &amp; 
              Residential_Street__pc   &amp; &apos;,+&apos; &amp; 
              Residential_City__pc     &amp; &apos;,+&apos; &amp; 
              Residential_State__pc    &amp; &apos;,+&apos; &amp; 
              Residential_Country__pc  &amp; &apos;,+&apos; &amp; 
              Residential_Zipocde__pc ,
      &quot;Click for Map&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Map Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Verification_OTP_Invalid_Attempt__c</fullName>
        <label>Member Verification OTP Invalid Attempt</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NA_Complete__c</fullName>
        <description>Formula flag to indicate that all sections of a member&apos;s active NA are comlplete</description>
        <formula>NA_LEHS_Complete__c  &amp;&amp;  NA_LEOM_Complete__c &amp;&amp; NA_LEWS_Complete__c &amp;&amp; NA_LEMP_Complete__c  &amp;&amp;
NA_LECF_Complete__c  &amp;&amp;  NA_LESF_Complete__c &amp;&amp; NA_LESB_Complete__c &amp;&amp; NA_LECP_Complete__c &amp;&amp;
NA_LEPT_Complete__c &amp;&amp; NA_LEMD_Complete__c &amp;&amp; NA_LEOL_Complete__c &amp;&amp; NA_LEAV_Complete__c &amp;&amp;
NA_LEEM_Complete__c &amp;&amp; NA_LEMQ_Complete__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Eligibility__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag used for member needs assessments eligibility</description>
        <label>NA Eligibility</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Expired__c</fullName>
        <description>Formula flag to determine if any section of member&apos;s NA has expired</description>
        <formula>NA_LEHS_Expired__c  ||  NA_LEOM_Expired__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEAV_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEAV_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LECF_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LECF_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LECP_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LECP_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEEM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEEM_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEHS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator to show if the NA Housing section is considered complete (TRUE) or partial (FALSE)</description>
        <label>NA LEHS Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEHS_Expired__c</fullName>
        <formula>IF( ( Last_NA_LEHS__c = null  ||   
      Last_NA_LEHS__c &lt;  NOW() -(1440/1440) ) &amp;&amp; 
      NA_Eligibility__c  = TRUE ,
          true, 
          false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA LEHS Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEHS_Update__c</fullName>
        <label>NA LEHS Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_LEMD_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEMD_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEMP_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEMP_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEMQ_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEMQ_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEOL_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEOL_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEOM_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA LEOM Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEOM_Expired__c</fullName>
        <description>Set a flag used for NA LEOM section expiration</description>
        <formula>IF( (Last_NA_LEOM__c  = null  ||   
      Last_NA_LEOM__c &lt;  NOW() -(1440/1440) ) &amp;&amp; 
      NA_Eligibility__c  = TRUE ,
          true, 
          false
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NA LEOM Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEOM_Update__c</fullName>
        <description>Need Assessment last update field</description>
        <label>NA LEOM Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_LEPT_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEPT_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LESB_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LESB_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LESF_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LESF_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_LEWS_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NA_LEWS_Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NA_Opt_Out_Date__c</fullName>
        <description>The date 1 year into the future when the member will be able to have needs assessments performed.  The member can choose to opt out of the needs assessments for a period of 1 year.  This value is set by a workflow rule triggered by the NA Opt Out field change.</description>
        <label>NA Opt Out Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_Opt_Out_Updated__c</fullName>
        <label>NA Opt Out Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NA_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, indicates that the member has opted to not participate in needs assessments for the period of 1 year.</description>
        <label>NA Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Onbase_Drivers_License__c</fullName>
        <description>Onbase Drivers License</description>
        <label>Onbase Drivers License</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Onbase_Signature_Card__c</fullName>
        <description>Onbase Signature Card</description>
        <label>Onbase Signature Card</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PersonID__c</fullName>
        <externalId>true</externalId>
        <label>PersonID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone_Check__c</fullName>
        <description>Concatenates and removes special charactors for the 3 phone# fields used for IVR authentication</description>
        <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Home_Phone__pc,   &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)  &amp; &quot;,&quot; &amp;
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Mobile_Phone__pc, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)  &amp; &quot;,&quot; &amp;
SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(SUBSTITUTE(Work_Phone__pc,   &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;), &quot; &quot;, &quot;&quot;), &quot;-&quot;, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Phone Check</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>PersonID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>LastModifiedDate__pc</columns>
        <columns>NA_Eligibility__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PersonID__pc</field>
            <operation>notEqual</operation>
        </filters>
        <label>All Members</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>test2</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>PersonID__c</columns>
        <columns>PersonID__pc</columns>
        <filterScope>Everything</filterScope>
        <label>1 - PersonID Changes</label>
        <sharedTo>
            <role>IT</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Business_Account</fullName>
        <active>true</active>
        <label>Business Account</label>
    </recordTypes>
    <validationRules>
        <fullName>AccountNameReadOnly</fullName>
        <active>false</active>
        <description>Prevent non admin users from editing member(person) records</description>
        <errorConditionFormula>(ISCHANGED(FirstName) || ISCHANGED(LastName) ||  ISCHANGED(MiddleName) ||  ISCHANGED(Salutation) ||  ISCHANGED(Suffix))</errorConditionFormula>
        <errorMessage>Member Name cannot be changed.</errorMessage>
    </validationRules>
</CustomObject>